// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders correctly 1`] = `
.c0 {
  width: 100%;
  border: none;
  border-top: 1px solid #E8E9EBFF;
  margin: 8px 0;
  padding: 8px 0;
}

<hr
  className="c0"
/>
`;

exports[`Divider with "color" renders correctly 1`] = `
.c0 {
  width: 100%;
  border: none;
  border-top: 1px solid #0062C9FF;
  margin: 8px 0;
  padding: 8px 0;
}

<hr
  className="c0"
/>
`;

exports[`Divider with "margin" and "padding" renders correctly 1`] = `
.c0 {
  width: 100%;
  border: none;
  border-top: 1px solid #E8E9EBFF;
  margin: 10px;
  padding: 5px;
}

<hr
  className="c0"
/>
`;
